trunk/Archive2/e7/4beb6ae2dee710/output
main.cpp: In function 'int main()':
main.cpp:19:9: error: 'ato' was not declared in this scope
         ato t2=thread(fun2);
         ^
